Added react islands

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import ReactComponent from '../components/ReactComponent';
 ---
 
 <Layout>
-	This is content
+	This is content <br>
+	<ReactComponent client:load />
 </Layout>
