--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,22 @@
+---
+let { title, desc, emoji } = Astro.props;
+if (Boolean(title) === false) title = "Astro Starter";
+if (Boolean(desc) === false) desc = "Starter template courtesy of https://ezez.win";
+if (Boolean(emoji) === false) emoji = "🔥";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>">
+		<link
+			rel="icon"
+			href=`data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>${emoji}</text></svg>`
+		/>
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Starter</title>
-		<meta name="description" content="Starter template">
+		<title>{title}</title>
+		<meta name="description" content={desc} />
 	</head>
 	<body>
 		<slot />
