Added styling to default layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,5 +29,7 @@ if (Boolean(emoji) === false) emoji = "🔥";
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		max-width: 420px;
+		margin-inline: auto;
 	}
 </style>
